Mejora en la presentacion del nombre sorteado

--- a/style.css
+++ b/style.css
@@ -136,8 +136,8 @@ ul {
 
 .result-list {
     margin-top: 15px;
-    color: #e55720;
-    font-size: 22px;
+    color: #FFFFFF;
+    font-size: 50px;
     font-weight: bold;
     text-align: center;
 }
