Boton sortear cambia color cuando esta desactivado

--- a/style.css
+++ b/style.css
@@ -179,6 +179,13 @@ ul {
     background-color: var(--color-button-hover);
 }
 
+.button-draw:disabled,
+button[disabled]{
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+}
+
 .button-reiniciar:hover {
     background-color: var(--color-button-hover);
 }
